src/app/forgot-password/forgot-password.component.scss
 //wrapper div class

@media screen and (max-width: 991px) {
    .wrapper {
        transition: all .33s cubic-bezier(.685,.0473,.346,1);
        left: 0;
        background-color: #fff;
    }
}

//page header div class

element.style {
    background-image: url(../../assets/img/login-image.jpg);
}

.page-header {
    background-color: #b2afab;
    background-position: center center;
    background-size: cover;
    min-height: 100vh;
    max-height: 999px;
    overflow: hidden;
    position: relative;
    width: 100%;
    z-index: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    -ms-flex-pack: center;
}

// filter styling for background image

.animation-transition-fast, .btn-hover, .dropdown-menu .dropdown-item,
.filter, .tagsinput .tag, .tagsinput-remove-link, [data-toggle=collapse] i {
    transition: all 150ms linear;
}

.page-header .filter::after {
    background-color: rgba(0, 0, 0, .5);
    content: "";
    display: block;
    height: 100%;
    left: 0;
    top: 0;
    position: absolute;
    width: 100%;
    z-index: 1;
}

// container

@media (min-width: 576px) {
    .container {
        max-width: 540px;
    }
}
.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

// row

.row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
}

// column

.ml-auto, .mx-auto {
    margin-left: auto !important;
}

.mr-auto, .mx-auto {
    margin-right: auto !important;
}

@media (min-width: 576px) {
    .col-sm-6 {
        -ms-flex: 0 0 50%;
        flex: 0 0 50%;
        max-width: 50%;
    }
}

.col-lg-4, .col-sm-6 {
    position: relative;
    width: 100%;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 15px;
}

// card register

.card-register {
    background-color: #ff8f5e;
    border-radius: 8px;
    color: #fff;
    max-width: 350px;
    margin: 120px 0 70px;
    min-height: 400px;
    padding: 30px;
    z-index: 1;
}

.card{
    box-shadow: 0 6px 10px -4px rgba(0, 0, 0, .15);
    position: relative;
    border: 0;
    transition: transform .3s cubic-bezier(.34,2,.6,1), box-shadow .2s ease, -webkit-transform .3s cubic-bezier(.34,2,.6,1);
}

.card {
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-clip: border-box;
}

// card register title

.page-header .card-register .title {
    margin-bottom: 10px;
}

.card-register .title {
    color: #b33c12;
    text-align: center;
}

.title {
    margin-top: 30px;
    min-height: 32px;
    text-decoration: none;
}

.title {
    font-family: Montserrat, Helvetica, Arial, sans-serif;
}

.h3, h3 {
    font-size: 1.825em;
    line-height: 1.4;
    margin: 20px 0 0;
}

h3{
    font-weight: 300;
}

h3 {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    unicode-bidi: isolate;
}

// social app line text 

.text-center {
    text-align: center !important;
}


// Facebook button

.card-register .social-line .btn, .section-image .card-register {
    margin-top: 0;
}

.btn:not(:disabled):not(.disabled) {
    cursor: pointer;
}

@media (max-width: 767px) {
    .social-line .btn, .subscribe-line .form-control {
        margin: 0 0 10px;
    }
}

.btn-facebook {
    color: #3b5998 !important;
}

.btn-neutral {
    filter: alpha(opacity=100);
    background-color: #fff;
    border-color: #fff;
    opacity: 1;
}

.btn {
    box-sizing: border-box;
    border-width: 2px;
    font-size: 12px;
    font-weight: 600;
    line-height: 1.75;
    text-transform: uppercase;
    transition: all 150ms linear;
}

.btn {
    display: inline-block;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    user-select: none;
    border: 1px solid transparent;
}

a {
    -webkit-font-smoothing: antialiased;
    font-family: Montserrat, Helvetica, Arial, sans-serif;
    text-decoration: none;
}

.btn-just-icon i {
    font-size: 16px;
    padding: 2px 0;
}

.fa {
    width: 18px;
    text-align: center;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px / 1 FontAwesome;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
}

.fa-facebook-square:before {
    content: "\f082";
}

// Google button 

.card-register .social-line .btn, .section-image .card-register {
    margin-top: 0;
}
.btn:not(:disabled):not(.disabled) {
    cursor: pointer;
}
@media (max-width: 767px) {
    .social-line .btn, .subscribe-line .form-control {
        margin: 0 0 10px;
    }
}

.btn-google{
    color: #dd4b39 !important;
}

.btn-neutral {
    background-color: #fff;
    border-color: #fff;
    opacity: 1;
}

.btn-just-icon {
    border-radius: 50px;
    height: 40px;
    width: 40px;
    min-width: 40px;
    padding: 8px;
}

.fa-google-plus:before {
    content: "\f0d5";
}

// Twitter button

.btn-twitter, .btn-twitter:active, .btn-twitter:focus, .btn-twitter:hover {
    color: #55acee !important;
}

.btn-neutral {
    background-color: #fff;
    border-color: #fff;
    opacity: 1;
}

.fa-twitter:before {
    content: "\f099";
}


// register and/or sign up form styling

form {
    display: block;
    margin-top: 0em;
    unicode-bidi: isolate;
}

.card-register label {
    margin-top: 15px;
}

label {
    display: inline-block;
    margin-bottom: .5rem;
}

label {
    cursor: default;
}

.input-group {
    background: #fff;
}

.input-group {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
    width: 100%;
}

// icon and place holders for input inside of register and/or sign up form 

.input-group-prepend {
    margin-right: -1px;
}

.input-group-append, .input-group-prepend {
    display: -ms-flexbox;
    display: flex;
}

.input-group.form-group-no-border .input-group-prepend .input-group-text {
    background: #fff !important;
    border: 1px solid #fff !important;
    transition: all .3s linear;
}

.input-group .input-group-prepend .input-group-text {
    margin-right: 0;
}

.input-group>.input-group-prepend>.input-group-text {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.input-group-text {
    display: flex;
    align-items: center;
    padding: .375rem .75rem;
    margin-bottom: 0;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    text-align: center;
    white-space: nowrap;
    border-radius: .25rem;
}

// nc icon for email

.nc-icon {
    display: inline-block;
    font: 14px / 1 nucleo-icons;
    font-size: inherit;
    speak: none;
    text-transform: none;
    -webkit-font-smoothing: antialiased;
}

.nc-email-85::before {
    content: "\ea2a";
}

// Email placeholder

.input-group>.form-control:not(:first-child) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
.register-form .form-control {
    border: 1px solid transparent !important;
}

.input-group>.form-control {
    position: relative;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    width: 1%;
    margin-bottom: 0;
}

.form-control {
    background-color: #fff;
    border-radius: 4px;
    color: #66615b;
    font-size: 14px;
    padding: 7px 12px;
    height: 40px;
    box-shadow: none;
}

.form-control {
    transition: all .3s linear;
}

.form-control {
    display: block;
    line-height: 1.5;
    background-clip: padding-box;
}

input{
    -webkit-font-smoothing: antialiased;
    font-family: Montserrat, Helvetica, Arial, sans-serif;
    font-weight: 300;
    margin: 0;
}

input:not([type="image" i], [type="range" i], [type="checkbox" i], [type="radio" i]) {
    overflow-clip-margin: 0px !important;
    overflow: clip !important;
}

input[type="text" i] {
    padding-block: 1px;
    padding-inline: 2px;
}

input{
    text-rendering: auto;
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    text-align: start;
    appearance: auto;
    -webkit-rtl-ordering: logical;
    cursor: text;
}

// Password placeholder is same as Email placeholder styling

// nc icon for password

.nc-key-25::before {
    content: "\ea34";
}

// register/sign up button 

.btn:not(:disabled):not(.disabled) {
    cursor: pointer;
}

.card-register .btn {
    margin-top: 30px;
}

.btn-round {
    border-radius: 30px;
}

.btn-danger {
    background-color: #f5593d;
    border-color: #f5593d;
    color: #fff;
    opacity: 1;
}

.btn {
    box-sizing: border-box;
    border-width: 2px;
    font-size: 12px;
    font-weight: 600;
    padding: .5rem 18px;
    line-height: 1.75;
    margin-right: 3px;
    text-transform: uppercase;
    transition: all 150ms linear;
}

.btn-block {
    display: block;
    width: 100%;
}

button{
    -webkit-font-smoothing: antialiased;
    font-family: Montserrat, Helvetica, Arial, sans-serif;
    margin: 0;
    overflow: visible;
    }
    
    // Forgot Password section styling

    .card-register .forgot {
        text-align: center;
    }

    .btn-danger.btn-link {
        color: #f5593d;
    }

    .btn.btn-border, .btn.btn-link {
        background-color: transparent;
    }

    .btn-link {
        border-color: transparent !important;
        padding: 7px 18px;
    }

    .btn-danger {
        opacity: 1;
    }


    //high-level styling for footer

.footer {
    background-attachment: fixed;
    position: relative;
    line-height: 20px;
}
.register-footer {
    bottom: 10px;
    z-index: 1;
    width: 100%;
    background: 0 0;
    color: #fff;
    left: 0;
}

.text-center {
    text-align: center !important;
    // margin-left: 3rem;
}


//header for footer

@media (max-width: 767px) {
    h6 {
        font-size: 1em;
    }
}
.h6, h6 {
    font-weight: 600;
    text-transform: uppercase;
    line-height: .5em;
}

h6 {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-family: Montserrat, Helvetica, Arial, sans-serif;
    color: rgb(245, 240, 236);
}

h6 {
    margin-top: 20px;
}

h6 {
    display: block;
    margin-block-start: 2.33em;
    margin-block-end: 1.33em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    unicode-bidi: isolate;
}

// heart icon animation

heathing animation {
    transform: scale(0.888139);
}

.footer .heart {
    color: #eb5e28;
}

.fa {
    width: 18px;
    text-align: center;
}

.heart {
    animation: 1s infinite heathing;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px / 1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
}

*, ::after, ::before {
    box-sizing: border-box;
}

div {
    display: block;
    unicode-bidi: isolate;
}




    //Misc

*, ::after, ::before {
    box-sizing: border-box;
}


div {
    display: block;
    unicode-bidi: isolate;
}

